# vpr2bitstream

./: .gitignore  Cargo.toml  README.md  debug  release
resources/: K3.xml  K3_custom_sb.xml  K3_spread.xml  add8r_yosys.v  demo_dualrail.yml  demo_dualrail_combi.yml  demo_dualrail_sequential_LARGE.yml  demo_singlerail_combi.yml  demo_singlerail_sequential.yml  k3_fc6.xml  k4_N8_topology-0.85sL2-0.15gL4-on-cb-off-sb_22nm_22nm_custom.xml  k4_custom.xml  p_fpga_k3_n1_dual_rail.v
resources/add8r_yosys/add8r_yosys.K3/: K3.xml  abc.out  abc_vtr.rc  add8r_yosys.net  add8r_yosys.odin.blif  add8r_yosys.place  add8r_yosys.pre-vpr.blif  add8r_yosys.route  vpr.out  yosys.out  yosys.ys  yosys_models.v
resources/benchmarks/: Div20z.v  add8.v  add8r.v  addbit.v  all  cpu0.v  crc5_d1.v  decode3.v  lfsr4.v  lfsr4_man.v  lsfr-backup.v  lsfr8.v  multi3.v  mux2.v  mux3.v  parallel_crc_16.v  radd3.v  serial_crc_16.v  serial_crc_16_yosys.v  smux.v  system_timer.v  xor5.v  xor6.v
resources/lsfr8_yosys/lsfr8_yosys.K3/: abc.out  lsfr8_yosys.abc.blif  lsfr8_yosys.net  lsfr8_yosys.odin.blif  lsfr8_yosys.place  lsfr8_yosys.route  lsfr8_yosys.v  vpr.out  yosys.out  yosys.ys
resources/testbenches/: add8.v  add8_tb.v
src/: bitstream.rs  cli.yml  data_types.rs  errors.rs  global.rs  lib.rs  logging.rs  macros.rs  main.rs  output.rs  parameter.rs  parse.rs  timing.rs  types.rs
src/abc2dualrail/: cli.yml  input.rs  load.rs  main.rs  model.rs  output.rs
src/vpr2bitstream/: cli.yml  errors.rs  input.rs  load.rs  main.rs  output.rs
temp/: K3.xml
